--- a/music/index.html
+++ b/music/index.html
@@ -4,9 +4,9 @@
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
         <li><a href="/">home</a></li>
-        <li><a href="/projects/">projects</a></li>
-        <li><a href="/music/">music</a></li>
-        <li><a href="/contact/">contact</a></li>
+        <li><a href="#">projects</a></li>
+        <li><a href="#">music</a></li>
+        <li><a href="#">contact</a></li>
     </ul>
 </div>
 <div id="main-container">
@@ -14,9 +14,9 @@
     <div id="navbar-contained" style="display: none;">
         <ul class="nav">
             <li><a href="/">home</a></li>
-            <li><a href="/projects/">projects</a></li>
-            <li><a href="/music/">music</a></li>
-            <li><a href="/contact/">contact</a></li>
+            <li><a href="#">projects</a></li>
+            <li><a href="#">music</a></li>
+            <li><a href="#">contact</a></li>
         </ul>
     </div>
     <div class="content-wrap flex alignment">
@@ -29,7 +29,7 @@
                 other folks can check out and enjoy.
                 <br /><br />i have a bit of a fascination with the tacky 90s website zeitgeist.
                 it has this nice hint of nostalgia to it for me, and it gives me a good excuse to put
-                something together in a way that is perfectly fine for me.
+                something together in a way that is fine for me.
                 <br /><br />feel free to peruse, i don't have too much here just yet!
             </div>
         </div>
