--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,7 @@
 <script src="js/wobbly.js"></script>
-<head><link rel="stylesheet" href="page.css"></head>
+<head>
+    <link rel="stylesheet" href="page.css">
+</head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
@@ -22,15 +24,7 @@
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
-                <h2><div id="wobble">welcome to the website!</div></h2>
-                hi there! i'm micah, and i am a pretty big fan of making and working on things.
-                i don't very often work on things that benefit solely myself, so i tend to keep
-                the focus of my projects to be a bit 'big-picture,' and work on things that
-                other folks can check out and enjoy.
-                <br /><br />i have a bit of a fascination with the tacky 90s website zeitgeist.
-                it has this nice hint of nostalgia to it for me, and it gives me a good excuse to put
-                something together in a way that is perfectly fine for me.
-                <br /><br />feel free to peruse, i don't have too much here just yet!
+                <h2><div id="wobble">projects</div></h2>
             </div>
         </div>
         <div id="right-sidebar" style="display: block;">
