--- a/projects/index.html
+++ b/projects/index.html
@@ -1,24 +1,24 @@
 <script src="js/wobbly.js"></script>
 <head>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="../page.css">
 </head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
-        <li><a href="/">home</a></li>
-        <li><a href="/projects/">projects</a></li>
-        <li><a href="/music/">music</a></li>
-        <li><a href="/contact/">contact</a></li>
+        <li><a href="../">home</a></li>
+        <li><a href="../projects/">projects</a></li>
+        <li><a href="../music/">music</a></li>
+        <li><a href="../contact/">contact</a></li>
     </ul>
 </div>
 <div id="main-container">
     <div id="header-contained" style="display: none;"></div>
     <div id="navbar-contained" style="display: none;">
         <ul class="nav">
-            <li><a href="/">home</a></li>
-            <li><a href="/projects/">projects</a></li>
-            <li><a href="/music/">music</a></li>
-            <li><a href="/contact/">contact</a></li>
+            <li><a href="../">home</a></li>
+            <li><a href="../projects/">projects</a></li>
+            <li><a href="../music/">music</a></li>
+            <li><a href="../contact/">contact</a></li>
         </ul>
     </div>
     <div class="content-wrap flex alignment">
