projects/index: not sure why this can't reference css

--- a/projects/index.html
+++ b/projects/index.html
@@ -24,7 +24,7 @@
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
-                <h2><div id="wobble">projects</div></h2>
+                <h2><div id="wobble">music</div></h2>
             </div>
         </div>
         <div id="right-sidebar" style="display: block;">
