projects: fill out page

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,4 +1,4 @@
-<script src="js/wobbly.js"></script>
+<script src="../js/clickexplode.js"></script>
 <head>
     <link rel="stylesheet" href="../page.css">
 </head>
@@ -24,18 +24,122 @@
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
-                <h2><div id="wobble">music</div></h2>
-            </div>
-        </div>
-        <div id="right-sidebar" style="display: block;">
-            <div class="sidebar-wrapper">
-                <strong>learn more:</strong>
-                <br />- check out the projects tab to get an idea of what i spend most of my free time on.
-                <br />- check out the music tab to learn my inspirations and some of my own work.
-                <br />- interested? get in touch over at the contact section.
+                <h1><div id="wobble">projects</div></h1>
+                here's a rough list of all of the things that i have done through my development career!
+
+                <hr />
+
+                <h2>toontown: corporate clash - october 2020 to present</h2>
+                i've been doing volunteer work for the toontown corporate clash crew for a very long time. i joined the crew as a game
+                moderator starting back in october 2020, then eventually joined the game design team january 2021. from there
+                i applied and became a game dev around may 2021, and am now a part of the team's technical leadership as of october 2021.
+
+                <br />
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Even short cutscenes in Toontown: Corporate Clash can take several hours of iteration to get just right. <br><br>Over the period of a few days, a Technical Lead Assistant, Main, developed a tool to create complete cutscenes, allowing lightning-fast iteration for cinematic development! <a href="https://t.co/vnKomOYNO0">pic.twitter.com/vnKomOYNO0</a></p>&mdash; Toontown: Corporate Clash (@CorporateClash) <a href="https://twitter.com/CorporateClash/status/1515014215635017730?ref_src=twsrc%5Etfw">April 15, 2022</a></blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+                i do a lot of work for the team these days. aside from managing assignments and projects for the team's game developers,
+                i also love to handle full-stack work on the game side of development, such as developing various tools for designing cutscenes
+                (see the embedded tweet), or other features which I can't talk about just yet unfortunately!
+
+                <br /><br />our game's engine, panda3d, is a little bit messy. the majority of the engine and dev work overall is python
+                across the full stack (python for game development is about as unperformant as you would expect), but i can say for
+                sure that working with the crew has given me massive insight onto how development pipelines function. i've been able to make
+                several amazing connections with several wonderful creative people, and have most certainly made life-long friends with em.
+
+                <br /><br /><hr />
+
+                <h2>wondertown - may 2022</h2>
+                me and my online friends bonded over a certain puzzle game series: Wonderland. created by midnight synergy, this
+                shareware masterpiece was a fantastic, colorful sokoban with several elements that kept the game light-hearted
+                and super fun. my friends and i still LOVE the game series, so i figured it was high time one of us made it
+                so we could play the vast suite of custom levels in multiplayer, right?
+
+                <br /><br />
+                <img src="../assets/projects/wondertown01.png" width=480 height=281 />
+                <img src="../assets/projects/wondertown02.png" width=480 height=281 />
+
+                <br /><br />this godot project is still in its infancy with lots of bugs -- but the system it boasts are
+                wildly successful for creating distributed elements within a puzzle game, which i am very proud of. i consider
+                it to be a testament to how my experience with creating multiplayer games and distributed systems has expanded
+                over the years, especially since this was my first godot project ever (!!!).
+
+                <br /><br /><hr />
+
+                <h2>wings beneath my fur - april 2020 to present</h2>
+                i've always been overly fascinated by JRPGS, the absurdities of earthbound and mother 3, the active battles
+                of chrono trigger, the exploration of trauma in OMORI, so on and so forth. all of these games have had
+                a massive impact on me as a person, and it has always been a dream of mine to present my own stories and morals
+                through a similar medium.
+                <br /><br />
+                <img src="../assets/projects/wbmf01.png" width=480 height=360 />
+                <img src="../assets/projects/wbmf03.png" width=480 height=360 />
+
+                <br /><br />meet rex, a canine left at a bus stop by his owners. out of curiousity, he enters the neighboring forest,
+                and discovers several cultures and developed animal societies ignored by humankind. the elders of these species
+                are upset by the arrival of rex; canines are no more than hunter-gatherers for the avians and felines, yet rex is
+                shown to be more 'awake' than even the presiding canine elder.
+                <br /><br />nothing motivates a living being more than their own fear; the fear of the unknown forbids us from
+                learning about what may hurt us, the fear of rejection ensures we stay afloat in our social spaces, so on and so forth.
+                wings beneath my fur serves as an exploration into both the silly fears and the real terrors that we may experience.
+
+                <br /><br />after all, there is nothing more terrifying than a truly fearless animal... wouldn't you agree?
+
+                <br /><br /><hr />
+
+                <h2>golf 2 - july 2021</h2>
+                my friends and i made a ridiculous gamejam game for gmtk2021. after eon's of no updates, washed-up Golf™ World Champion Hudson Buttermilk seeks out a new game...
+                <br /><br />play here: <a href="https://micman27.itch.io/golf-2">https://micman27.itch.io/golf-2</a>
+                <br /><br />
+                <img src="../assets/projects/golf01.png" width=480 height=269 />
+                <img src="../assets/projects/golf02.png" width=480 height=269 />
+
+                <br /><br />meet the world's first golf roguelike. playing as a golf kart, Hudson is chained to you, brandishing a golf club
+                that allows you to get only the most impressive of golf shots. after making several sufficient putts, you can move to the
+                next hole. each stage contains several powerups to help you deal with the onslaught of golf-based enemies.
+
+                <br /><br />our team placed #116 overall, from #5,724 entries. fun was a solid #81th place!
+
+                <br /><br /><hr />
+
+                <h2>gamemaker projects - 2008 to 2021</h2>
+                i honestly can't remember when i started using gamemaker. but it was such a long time ago, that's for sure.
+                <br /><br />to tell you the truth, i have an unbelievable amount of projects over this decade. i was always super excited to try
+                out new things at this time, and so i would get several starts on several potential projects just to learn something
+                new... but then never do the actual difficult part of game development (fleshing a thing out to completion).
+                <br /><br />so in lieu of that, i'll at least present a few things that i do have catalogued still.
+                apologies for no download links.
+                <br />(and for reference, i was born in 2002, so a lot of these were made when i was really quite young!)
+
+                <h3>various platformers (201X to 2016)</h3>
+                <img src="../assets/projects/gamemaker04.png" width=480 height=360 />
+                <img src="../assets/projects/gamemaker08.png" width=480 height=360 />
+                <br /><br />i was a big fan of the platformer games that the folks in my community would develop,
+                to the point that i really was eager to try and create games inspired by them. while for a long
+                time most of my projects were either low-quality or weren't very successful,
+                a lot of my friends started to find a lot of investment in my own work, which was satisfying.
+
+                <h3>epigam dungeons (november 2014)</h3>
+                <img src="../assets/projects/gamemaker06.png" width=480 height=360 />
+                <img src="../assets/projects/gamemaker07.png" width=480 height=360 />
+                <br /><br />probably my first time delving deep into dungeon generation and roguelike development.
+                i found binding of isaac to be a very interesting and addicting experience, so i attempted to
+                make a game to imitate it.
+                <br /><br />it was really difficult to get things going, but i really enjoyed working on
+                the dungeon generation; i was pretty much hooked on procedural generation and randomness design going forward.
+
+                <h3>protect the orb (december 2014)</h3>
+                <img src="../assets/projects/gamemaker01.png" width=480 height=360 />
+                <img src="../assets/projects/gamemaker05.png" width=480 height=360 />
+                <br /><br />an arcade-based shoot-em-up. weapons and accessories are chosen from the menu screen as shown, and you then have to
+                use these weapons while levelling up and upgrading your own stats to deal with the increasing enemy horde.
+                <br /><br />i was a big fan of my upgrade and equip system at the time, all of the weapons i made
+                felt pretty unique, and certain hat/glasses combos would synergize in neat ways.
+
             </div>
         </div>
     </div>
+
     <div id="footer">
         <div class="footer-wrapper"></div>
     </div>
