web: flesh out contact/music/projects

--- a/contact/index.html
+++ b/contact/index.html
@@ -25,14 +25,12 @@
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
                 <h2><div id="wobble">contact me</div></h2>
-            </div>
-        </div>
-        <div id="right-sidebar" style="display: block;">
-            <div class="sidebar-wrapper">
-                <strong>learn more:</strong>
-                <br />- check out the projects tab to get an idea of what i spend most of my free time on.
-                <br />- check out the music tab to learn my inspirations and some of my own work.
-                <br />- interested? get in touch over at the contact section.
+                feel free to get in touch with me!
+                <br />
+                <br /><strong>email: </strong>micahanichols27@gmail.com
+                <br /><strong>github: </strong><a href="https://github.com/thejanjan">@thejanjan</a>
+                <br /><strong>youtube: </strong><a href="https://www.youtube.com/channel/UCnNtNUfwisSs5h8g71lk8KA">Janjan</a>
+                <br /><strong>linkedin: </strong>(todo)
             </div>
         </div>
     </div>
