--- a/music/index.html
+++ b/music/index.html
@@ -24,15 +24,10 @@
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
-                <h2><div id="wobble">music</div></h2>
-            </div>
-        </div>
-        <div id="right-sidebar" style="display: block;">
-            <div class="sidebar-wrapper">
-                <strong>learn more:</strong>
-                <br />- check out the projects tab to get an idea of what i spend most of my free time on.
-                <br />- check out the music tab to learn my inspirations and some of my own work.
-                <br />- interested? get in touch over at the contact section.
+                <h3><div id="wobble">music</div></h3>
+
+                <br />this page is still in development-- i'll get back to this later.
+                <br />don't worry! you're not missing too much right now.
             </div>
         </div>
     </div>
