--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,8 @@
                 <hr />
 
                 <h2>toontown: corporate clash - october 2020 to present</h2>
-                i've been doing volunteer work for the toontown corporate clash crew for a very long time. i joined the crew as a game
+                game website: <a href="https://corporateclash.net/">https://corporateclash.net/</a>
+                <br /><br />i've been doing volunteer work for the toontown corporate clash crew for a very long time. i joined the crew as a game
                 moderator starting back in october 2020, then eventually joined the game design team january 2021. from there
                 i applied and became a game dev around may 2021, and am now a part of the team's technical leadership as of october 2021.
 
@@ -50,7 +51,8 @@
                 <br /><br /><hr />
 
                 <h2>wondertown - may 2022</h2>
-                me and my online friends bonded over a certain puzzle game series: Wonderland. created by midnight synergy, this
+                github: <a href="https://github.com/thejanjan/wondertown">https://github.com/thejanjan/wondertown</a>
+                <br /><br />me and my online friends bonded over a certain puzzle game series: Wonderland. created by midnight synergy, this
                 shareware masterpiece was a fantastic, colorful sokoban with several elements that kept the game light-hearted
                 and super fun. my friends and i still LOVE the game series, so i figured it was high time one of us made it
                 so we could play the vast suite of custom levels in multiplayer, right?
@@ -90,6 +92,7 @@
                 <h2>golf 2 - july 2021</h2>
                 my friends and i made a ridiculous gamejam game for gmtk2021. after eon's of no updates, washed-up Golf™ World Champion Hudson Buttermilk seeks out a new game...
                 <br /><br />play here: <a href="https://micman27.itch.io/golf-2">https://micman27.itch.io/golf-2</a>
+                <br />github: <a href="https://github.com/thejanjan/gmtk-2021">https://github.com/thejanjan/gmtk-2021</a>
                 <br /><br />
                 <img src="../assets/projects/golf01.png" width=480 height=269 />
                 <img src="../assets/projects/golf02.png" width=480 height=269 />
