--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <script src="js/wobbly.js"></script>
-<head><link rel="stylesheet" href="page.css"></head>
+<head>
+    <link rel="stylesheet" href="page.css">
+    <link rel="shortcut icon" href="favicon.ico">
+</head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
