--- a/music/index.html
+++ b/music/index.html
@@ -1,6 +1,7 @@
 <script src="js/wobbly.js"></script>
 <head>
     <link rel="stylesheet" href="../page.css">
+    <link rel="shortcut icon" href="../favicon.ico">
 </head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
