pages: add titles

--- a/music/index.html
+++ b/music/index.html
@@ -1,4 +1,5 @@
 <script src="js/wobbly.js"></script>
+<title>music - janjan</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
