--- a/projects/index.html
+++ b/projects/index.html
@@ -1,4 +1,5 @@
 <script src="../js/clickexplode.js"></script>
+<title>projects - janjan</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
