--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="js/wobbly.js"></script>
+<title>janjan's website</title>
 <head>
     <link rel="stylesheet" href="page.css">
     <link rel="shortcut icon" href="favicon.ico">
