page: rename to janjan

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
                 <h2><div id="wobble">welcome to the website!</div></h2>
-                hi there! i'm micah, and i am a pretty big fan of making and working on things.
+                hi there! i'm janjan, and i am a pretty big fan of making and working on things.
                 i don't very often work on things that benefit solely myself, so i tend to keep
                 the focus of my projects to be a bit 'big-picture,' and work on things that
                 other folks can check out and enjoy.
