website: add linkedin

--- a/contact/index.html
+++ b/contact/index.html
@@ -29,9 +29,9 @@
                 <h2><div id="wobble">contact me</div></h2>
                 feel free to get in touch with me!
                 <br />
-                <br /><strong>github: </strong><a href="https://github.com/thejanjan">@thejanjan</a>
-                <br /><strong>youtube: </strong><a href="https://www.youtube.com/channel/UCnNtNUfwisSs5h8g71lk8KA">Janjan</a>
-                <br /><strong>linkedin: </strong>(todo)
+                <br /><strong>github: </strong><a href="https://github.com/thejanjan">@thejanjan (link)</a>
+                <br /><strong>youtube: </strong><a href="https://www.youtube.com/channel/UCnNtNUfwisSs5h8g71lk8KA">Janjan (link)</a>
+                <br /><strong>linkedin: </strong><a href="https://www.linkedin.com/in/shrimple-as-that/">Micah Nichols (link)</a>
             </div>
         </div>
     </div>
