website: modernize EVERYTHING wow

--- a/art/index.html
+++ b/art/index.html
@@ -1,5 +1,5 @@
 <script src="js/wobbly.js"></script>
-<title>sheep - contact</title>
+<title>sheep - music</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
@@ -30,13 +30,10 @@
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
-                <h2><div id="wobble">contact me</div></h2>
-                feel free to get in touch with me!
-                <br />
-                <br /><strong>discord (best): </strong><i>klutzpah</i>
-                <br /><strong>github: </strong><a href="https://github.com/thejanjan">@thejanjan (link)</a>
-                <br /><strong>youtube: </strong><a href="https://www.youtube.com/channel/UCnNtNUfwisSs5h8g71lk8KA">Janjan (link)</a>
-                <br /><strong>linkedin: </strong><a href="https://www.linkedin.com/in/shrimple-as-that/">Micah Nichols (link)</a>
+                <h3><div id="wobble">art</div></h3>
+
+                <br />this page is still in development-- i'll get back to this later.
+                <br />don't worry! you're not missing too much right now.
             </div>
         </div>
     </div>
