--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,4 @@
-<script src="../js/clickexplode.js"></script>
-<title>projects - janjan</title>
+<title>sheep - projects</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
@@ -7,9 +6,11 @@
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
-        <li><a href="../">home</a></li>
+        <li><a href="../">main</a></li>
+        <li><a href="../about/">about</a></li>
         <li><a href="../projects/">projects</a></li>
         <li><a href="../music/">music</a></li>
+        <li><a href="../art/">art</a></li>
         <li><a href="../contact/">contact</a></li>
     </ul>
 </div>
@@ -17,9 +18,11 @@
     <div id="header-contained" style="display: none;"></div>
     <div id="navbar-contained" style="display: none;">
         <ul class="nav">
-            <li><a href="../">home</a></li>
+            <li><a href="../">main</a></li>
+            <li><a href="../about/">about</a></li>
             <li><a href="../projects/">projects</a></li>
             <li><a href="../music/">music</a></li>
+            <li><a href="../art/">art</a></li>
             <li><a href="../contact/">contact</a></li>
         </ul>
     </div>
@@ -27,28 +30,73 @@
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
                 <h1><div id="wobble">projects</div></h1>
-                here's a rough list of all of the things that i have done through my development career!
+                here's a rough list of all of the things that i have done through my game development career.
 
                 <hr />
 
                 <h2>toontown: corporate clash - october 2020 to present</h2>
-                game website: <a href="https://corporateclash.net/">https://corporateclash.net/</a>
-                <br /><br />i've been doing volunteer work for the toontown corporate clash crew for a very long time. i joined the crew as a game
-                moderator starting back in october 2020, then eventually joined the game design team january 2021. from there
-                i applied and became a game dev around may 2021, and am now a part of the team's technical leadership as of october 2021.
+                game website: <a href="https://corporateclash.net/">https://corporateclash.net/</a>. it's kind of ugly sorry
+                <br /><br />
+                i've been doing volunteer work for the toontown corporate clash crew for a very long time. i've gone through 
+                several positions on the team, doing a lot of lead development and higher-level management. 
+                one can find a full timeline and list of positions over on my linkedin (see my contact section).
 
-                <br />
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Even short cutscenes in Toontown: Corporate Clash can take several hours of iteration to get just right. <br><br>Over the period of a few days, a Technical Lead Assistant, Main, developed a tool to create complete cutscenes, allowing lightning-fast iteration for cinematic development! <a href="https://t.co/vnKomOYNO0">pic.twitter.com/vnKomOYNO0</a></p>&mdash; Toontown: Corporate Clash (@CorporateClash) <a href="https://twitter.com/CorporateClash/status/1515014215635017730?ref_src=twsrc%5Etfw">April 15, 2022</a></blockquote>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <br /><br />
+                while on the project, i developed a large amount of features, systems, and tools. my main priorities lived in developing tools and interfaces for players and developers alike. 
+                a few examples of my contributions to the project:
+                <ul style="list-style-type:disc;">
+                <li>an updated and improved friends list</li>
+                <li>a game-wide group tracker for organizing boss raids with friends or strangers</li>
+                <li>an in-game guilds system, with progression, objectives, ranks, and upgrades for large communities</li>
+                <li>a new pipeline for quickly developing ui for in-engine use (<a href="https://www.youtube.com/watch?v=CKwahgkLEmY">check out a development video here!</a>)</li>
+                <li>a complete rewrite of the game's questing backend</li>
+                <li>an in-engine movie maker, which has been used to create over 100 cutscenes and several trailer shots (including ones used for our Makeship plushie promotion)</li>
+                <li>battle mechanics, animations, sound design, and technical art for several bosses (rainmaker, chainsaw consultant, pacesetter, and many more)</li>
+                <li>many battle themes and motifs, several being the most popular themes in the game (examples: <a href="https://www.youtube.com/watch?v=czuv5nRCJMQ">01</a> <a href="https://www.youtube.com/watch?v=HHchrjXax2Y">02</a> <a href="https://www.youtube.com/watch?v=BRPaPEF-H1o">03</a>)</li>
+                </ul>
+                i can say for sure that working with the crew has given me massive insight onto how development pipelines function. i've been able to make
+                several amazing connections with several wonderful creative people, and have most certainly made life-long friends with em. this project allowed me to grow and mature, both as a developer and a person.
 
-                i do a lot of work for the team these days. aside from managing assignments and projects for the team's game developers,
-                i also love to handle full-stack work on the game side of development, such as developing various tools for designing cutscenes
-                (see the embedded tweet), or other features which I can't talk about just yet unfortunately!
+                <br /><br /><hr />
 
-                <br /><br />our game's engine, panda3d, is a little bit messy. the majority of the engine and dev work overall is python
-                across the full stack (python for game development is about as unperformant as you would expect), but i can say for
-                sure that working with the crew has given me massive insight onto how development pipelines function. i've been able to make
-                several amazing connections with several wonderful creative people, and have most certainly made life-long friends with em.
+                <h2>dog game - april 2020 to present</h2>
+                dog game is a long-term JRPG project for me, one that i'm currently persuing in private. 
+                its intent is to explore the kinds of vast worlds you would find exclusively online, and introduce people to what it would be like to live in a weird fantasy world and society, 
+                one that... actually exists.
+                <br /><br />
+                and yes, i want to call it dog game.
+
+                <br /><br />
+                <img src="../assets/projects/wbmf01.png" width=480 height=360 />
+
+                <br /><br /><hr />
+
+                <h2>qwertypop - march 2023 to june 2023</h2>
+                this is an extremely weird and awesome typing rhythm game demo i made for a graphics class project. it was nominated as the best game in that class. 
+                i remember one of the judges for it was an executive over at pipeworks, which i thought was super cool. 
+                the programming, art, and music in the demo was all done independently by me.
+                <br /><br />
+                <a href="https://youtu.be/nN10AcPSUqM">check out a video of it here.</a>
+
+                <br /><br />
+                <img src="../assets/projects/qwerty01.png" width=480 height=270 />
+                <img src="../assets/projects/qwerty02.png" width=480 height=270 />
+
+                <br /><br /><hr />
+
+                <h2>golf 2 - july 2021</h2>
+                i was the game director for a team of me and around 7 friends for gmtk2021. after eon's of no updates, washed-up Golfï¿½ World Champion Hudson Buttermilk seeks out a new game...
+                <br /><br />play here: <a href="https://micman27.itch.io/golf-2">https://micman27.itch.io/golf-2</a>
+                <br />github: <a href="https://github.com/thejanjan/gmtk-2021">https://github.com/thejanjan/gmtk-2021</a>
+                <br /><br />
+                <img src="../assets/projects/golf01.png" width=480 height=269 />
+                <img src="../assets/projects/golf02.png" width=480 height=269 />
+
+                <br /><br />meet the world's first golf roguelike. playing as a golf kart, Hudson is chained to you, brandishing a golf club
+                that allows you to get only the most impressive of golf shots. after making several sufficient putts, you can move to the
+                next hole. each stage contains several powerups to help you deal with the onslaught of golf-based enemies.
+
+                <br /><br />our team placed #116 overall, from #5,724 entries. fun was a solid #81th place!
 
                 <br /><br /><hr />
 
@@ -67,47 +115,13 @@
                 wildly successful for creating distributed elements within a puzzle game, which i am very proud of. i consider
                 it to be a testament to how my experience with creating multiplayer games and distributed systems has expanded
                 over the years, especially since this was my first godot project ever (!!!).
-
-                <br /><br /><hr />
-
-                <h2>wings beneath my fur - april 2020 to present</h2>
-                i've always been overly fascinated by JRPGS, the absurdities of earthbound and mother 3, the active battles
-                of chrono trigger, the exploration of trauma in OMORI, so on and so forth. all of these games have had
-                a massive impact on me as a person, and it has always been a dream of mine to present my own stories and morals
-                through a similar medium.
                 <br /><br />
-                <img src="../assets/projects/wbmf01.png" width=480 height=360 />
-                <img src="../assets/projects/wbmf03.png" width=480 height=360 />
-
-                <br /><br />meet rex, a canine left at a bus stop by his owners. out of curiousity, he enters the neighboring forest,
-                and discovers several cultures and developed animal societies ignored by humankind. the elders of these species
-                are upset by the arrival of rex; canines are no more than hunter-gatherers for the avians and felines, yet rex is
-                shown to be more 'awake' than even the presiding canine elder.
-                <br /><br />nothing motivates a living being more than their own fear; the fear of the unknown forbids us from
-                learning about what may hurt us, the fear of rejection ensures we stay afloat in our social spaces, so on and so forth.
-                wings beneath my fur serves as an exploration into both the silly fears and the real terrors that we may experience.
-
-                <br /><br />after all, there is nothing more terrifying than a truly fearless animal... wouldn't you agree?
+                i haven't persued development on it in a while, since i've been focusing much more on other projects. 
+                it was an exciting challenge to create something of this caliber as an engine starter project, though.
 
                 <br /><br /><hr />
 
-                <h2>golf 2 - july 2021</h2>
-                my friends and i made a ridiculous gamejam game for gmtk2021. after eon's of no updates, washed-up Golf™ World Champion Hudson Buttermilk seeks out a new game...
-                <br /><br />play here: <a href="https://micman27.itch.io/golf-2">https://micman27.itch.io/golf-2</a>
-                <br />github: <a href="https://github.com/thejanjan/gmtk-2021">https://github.com/thejanjan/gmtk-2021</a>
-                <br /><br />
-                <img src="../assets/projects/golf01.png" width=480 height=269 />
-                <img src="../assets/projects/golf02.png" width=480 height=269 />
-
-                <br /><br />meet the world's first golf roguelike. playing as a golf kart, Hudson is chained to you, brandishing a golf club
-                that allows you to get only the most impressive of golf shots. after making several sufficient putts, you can move to the
-                next hole. each stage contains several powerups to help you deal with the onslaught of golf-based enemies.
-
-                <br /><br />our team placed #116 overall, from #5,724 entries. fun was a solid #81th place!
-
-                <br /><br /><hr />
-
-                <h2>gamemaker projects - 2008 to 2021</h2>
+                <h2>REALLY OLD STUFF - 2008 to 2021</h2>
                 i honestly can't remember when i started using gamemaker. but it was such a long time ago, that's for sure.
                 <br /><br />to tell you the truth, i have an unbelievable amount of projects over this decade. i was always super excited to try
                 out new things at this time, and so i would get several starts on several potential projects just to learn something
