--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src="js/wobbly.js"></script>
-<title>janjan's website</title>
+<title>sheep - main</title>
 <head>
     <link rel="stylesheet" href="page.css">
     <link rel="shortcut icon" href="favicon.ico">
@@ -7,9 +7,11 @@
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
-        <li><a href="/">home</a></li>
+        <li><a href="/">main</a></li>
+        <li><a href="/about/">about</a></li>
         <li><a href="/projects/">projects</a></li>
         <li><a href="/music/">music</a></li>
+        <li><a href="/art/">art</a></li>
         <li><a href="/contact/">contact</a></li>
     </ul>
 </div>
@@ -17,32 +19,30 @@
     <div id="header-contained" style="display: none;"></div>
     <div id="navbar-contained" style="display: none;">
         <ul class="nav">
-            <li><a href="/">home</a></li>
+            <li><a href="/">main</a></li>
+            <li><a href="/about/">about</a></li>
             <li><a href="/projects/">projects</a></li>
             <li><a href="/music/">music</a></li>
+            <li><a href="/art/">art</a></li>
             <li><a href="/contact/">contact</a></li>
         </ul>
     </div>
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
-                <h2><div id="wobble">welcome to the website!</div></h2>
-                hi there! i'm janjan, and i am a pretty big fan of making and working on things.
-                i don't very often work on things that benefit solely myself, so i tend to keep
-                the focus of my projects to be a bit 'big-picture,' and work on things that
-                other folks can check out and enjoy.
-                <br /><br />i have a bit of a fascination with the tacky 90s website zeitgeist.
-                it has this nice hint of nostalgia to it for me, and it gives me a good excuse to put
-                something together in a way that is perfectly fine for me.
-                <br /><br />feel free to peruse, i don't have too much here just yet!
-            </div>
-        </div>
-        <div id="right-sidebar" style="display: block;">
-            <div class="sidebar-wrapper">
-                <strong>learn more:</strong>
-                <br />- check out the projects tab to get an idea of what i spend most of my free time on.
-                <br />- check out the music tab to learn my inspirations and some of my own work.
-                <br />- interested? get in touch over at the contact section.
+                <h2><div id="wobble">hey guys its me sheep</div></h2>
+                this website serves as a general portfolio for my work.
+                i'm a software engineer with a strong orientation in game design.
+                i've developed a deep understanding of what it takes to produce games after
+                12 years of persuing it passionately as a hobby.
+                i've also worked as a technical manager and director for different dev teams,
+                between the scale of small gamejam projects and AA-sized game studios (60-100 staff).
+
+                <br /><br />
+                i'm available for work and commissions. check out the contact section for more.
+                
+                <br /><br />
+                feel free to look around!
             </div>
         </div>
     </div>
