--- a/music/index.html
+++ b/music/index.html
@@ -1,5 +1,5 @@
 <script src="js/wobbly.js"></script>
-<title>music - janjan</title>
+<title>sheep - music</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
@@ -7,9 +7,11 @@
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
     <ul class="nav" style="font-family: sans-serif">
-        <li><a href="../">home</a></li>
+        <li><a href="../">main</a></li>
+        <li><a href="../about/">about</a></li>
         <li><a href="../projects/">projects</a></li>
         <li><a href="../music/">music</a></li>
+        <li><a href="../art/">art</a></li>
         <li><a href="../contact/">contact</a></li>
     </ul>
 </div>
@@ -17,9 +19,11 @@
     <div id="header-contained" style="display: none;"></div>
     <div id="navbar-contained" style="display: none;">
         <ul class="nav">
-            <li><a href="../">home</a></li>
+            <li><a href="../">main</a></li>
+            <li><a href="../about/">about</a></li>
             <li><a href="../projects/">projects</a></li>
             <li><a href="../music/">music</a></li>
+            <li><a href="../art/">art</a></li>
             <li><a href="../contact/">contact</a></li>
         </ul>
     </div>
