projects: add makeship link

--- a/projects/index.html
+++ b/projects/index.html
@@ -50,7 +50,7 @@
                 <li>an in-game guilds system, with progression, objectives, ranks, and upgrades for large communities</li>
                 <li>a new pipeline for quickly developing ui for in-engine use (<a href="https://www.youtube.com/watch?v=CKwahgkLEmY">check out a development video here!</a>)</li>
                 <li>a complete rewrite of the game's questing backend</li>
-                <li>an in-engine movie maker, which has been used to create over 100 cutscenes and several trailer shots (including ones used for our Makeship plushie promotion)</li>
+                <li>an in-engine movie maker, which has been used to create over 100 cutscenes and several trailer shots (including ones used for our Makeship plushie promotion -- <a href="https://www.makeship.com/products/buck-ruffler-the-duck-shuffler-plush">check this link out</a>)</li>
                 <li>battle mechanics, animations, sound design, and technical art for several bosses (rainmaker, chainsaw consultant, pacesetter, and many more)</li>
                 <li>many battle themes and motifs, several being the most popular themes in the game (examples: <a href="https://www.youtube.com/watch?v=czuv5nRCJMQ">01</a> <a href="https://www.youtube.com/watch?v=HHchrjXax2Y">02</a> <a href="https://www.youtube.com/watch?v=BRPaPEF-H1o">03</a>)</li>
                 </ul>
