--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
 
                 <hr />
 
-                <h2>toontown: corporate clash - october 2020 to present</h2>
+                <h2>toontown: corporate clash - october 2020 to october 2023</h2>
                 game website: <a href="https://corporateclash.net/">https://corporateclash.net/</a>. it's kind of ugly sorry
                 <br /><br />
                 i've been doing volunteer work for the toontown corporate clash crew for a very long time. i've gone through 
@@ -62,9 +62,9 @@
                 <h2>dog game - april 2020 to present</h2>
                 dog game is a long-term JRPG project for me, one that i'm currently persuing in private. 
                 its intent is to explore the kinds of vast worlds you would find exclusively online, and introduce people to what it would be like to live in a weird fantasy world and society, 
-                one that... actually exists.
+                one that actually exists.
                 <br /><br />
-                and yes, i want to call it dog game.
+                yes it is called dog game.
 
                 <br /><br />
                 <img src="../assets/projects/wbmf01.png" width=480 height=360 />
@@ -72,7 +72,7 @@
                 <br /><br /><hr />
 
                 <h2>qwertypop - march 2023 to june 2023</h2>
-                this is an extremely weird and awesome typing rhythm game demo i made for a graphics class project. it was nominated as the best game in that class. 
+                here is an extremely weird and awesome typing rhythm game demo i made for a graphics class project. it was nominated as the best game in that class.
                 i remember one of the judges for it was an executive over at pipeworks, which i thought was super cool. 
                 the programming, art, and music in the demo was all done independently by me.
                 <br /><br />
@@ -92,7 +92,7 @@
                 <img src="../assets/projects/golf01.png" width=480 height=269 />
                 <img src="../assets/projects/golf02.png" width=480 height=269 />
 
-                <br /><br />meet the world's first golf roguelike. playing as a golf kart, Hudson is chained to you, brandishing a golf club
+                <br /><br />meet the world's first(?) golf roguelike. playing as a golf kart, Hudson is chained to you, brandishing a golf club
                 that allows you to get only the most impressive of golf shots. after making several sufficient putts, you can move to the
                 next hole. each stage contains several powerups to help you deal with the onslaught of golf-based enemies.
 
