--- a/about/index.html
+++ b/about/index.html
@@ -110,7 +110,7 @@
                 <br /><br />
                 in october 2023, i left the community after personal abuse i faced from a categorically aggressive community figure.
                 it's personal and stressful, so i won't get into it here, but it's given me the time and space to start working on my personal projects again, which i've looked forward to.
-                online drama will be online drama, and i'll always cherish the days i got to spend working on the project. i still talk with the close friends i made there every day.
+                i'll always cherish the days i got to spend working on the project. i still talk with the close friends i made there every day.
             </div>
         </div>
     </div>
