--- a/about/index.html
+++ b/about/index.html
@@ -1,37 +1,19 @@
-<title>sheep - about</title>
+<title>about</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
 </head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
-    <ul class="nav" style="font-family: sans-serif">
-        <li><a href="../">main</a></li>
-        <li><a href="../about/">about</a></li>
-        <li><a href="../projects/">projects</a></li>
-        <li><a href="../music/">music</a></li>
-        <li><a href="../art/">art</a></li>
-        <li><a href="../contact/">contact</a></li>
-    </ul>
+    <script src="js/navdiv.js"></script>
 </div>
 <div id="main-container">
-    <div id="header-contained" style="display: none;"></div>
-    <div id="navbar-contained" style="display: none;">
-        <ul class="nav">
-            <li><a href="../">main</a></li>
-            <li><a href="../about/">about</a></li>
-            <li><a href="../projects/">projects</a></li>
-            <li><a href="../music/">music</a></li>
-            <li><a href="../art/">art</a></li>
-            <li><a href="../contact/">contact</a></li>
-        </ul>
-    </div>
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
                 <h2>bio</h2>
-                i was born in february 2002. so, at the time of writing (9/14/23) i'm 21. you can use any pronouns with me. 
-                currently, i live in eugene, oregon. i'm graduating from the University of Oregon in march 2024. 
+                i was born in february 2002, i'm currently 22. you can use any pronouns with me. 
+                currently, i live in eugene, oregon. i'm graduating from the University of Oregon in june 2024. 
                 i spend most of my time online, usually developing various games or working on music. 
                 but i also like to relax by watching videos or playing games with others too.
                 <br /><br />
