--- a/art/index.html
+++ b/art/index.html
@@ -1,32 +1,14 @@
 <script src="js/wobbly.js"></script>
-<title>sheep - music</title>
+<title>music</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
 </head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
-    <ul class="nav" style="font-family: sans-serif">
-        <li><a href="../">main</a></li>
-        <li><a href="../about/">about</a></li>
-        <li><a href="../projects/">projects</a></li>
-        <li><a href="../music/">music</a></li>
-        <li><a href="../art/">art</a></li>
-        <li><a href="../contact/">contact</a></li>
-    </ul>
+    <script src="js/navdiv.js"></script>
 </div>
 <div id="main-container">
-    <div id="header-contained" style="display: none;"></div>
-    <div id="navbar-contained" style="display: none;">
-        <ul class="nav">
-            <li><a href="../">main</a></li>
-            <li><a href="../about/">about</a></li>
-            <li><a href="../projects/">projects</a></li>
-            <li><a href="../music/">music</a></li>
-            <li><a href="../art/">art</a></li>
-            <li><a href="../contact/">contact</a></li>
-        </ul>
-    </div>
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
