--- a/contact/index.html
+++ b/contact/index.html
@@ -1,39 +1,21 @@
 <script src="js/wobbly.js"></script>
-<title>sheep - contact</title>
+<title>contact</title>
 <head>
     <link rel="stylesheet" href="../page.css">
     <link rel="shortcut icon" href="../favicon.ico">
 </head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
-    <ul class="nav" style="font-family: sans-serif">
-        <li><a href="../">main</a></li>
-        <li><a href="../about/">about</a></li>
-        <li><a href="../projects/">projects</a></li>
-        <li><a href="../music/">music</a></li>
-        <li><a href="../art/">art</a></li>
-        <li><a href="../contact/">contact</a></li>
-    </ul>
+    <script src="js/navdiv.js"></script>
 </div>
 <div id="main-container">
-    <div id="header-contained" style="display: none;"></div>
-    <div id="navbar-contained" style="display: none;">
-        <ul class="nav">
-            <li><a href="../">main</a></li>
-            <li><a href="../about/">about</a></li>
-            <li><a href="../projects/">projects</a></li>
-            <li><a href="../music/">music</a></li>
-            <li><a href="../art/">art</a></li>
-            <li><a href="../contact/">contact</a></li>
-        </ul>
-    </div>
     <div class="content-wrap flex alignment">
         <div id="content-container" style="flex-grow: 1;">
             <div class="wrapper">
                 <h2><div id="wobble">contact me</div></h2>
                 feel free to get in touch with me!
                 <br />
-                <br /><strong>discord (best): </strong><i>klutzpah</i>
+                <br /><strong>email (best): </strong>micahanichols27@gmail.com
                 <br /><strong>github: </strong><a href="https://github.com/thejanjan">@thejanjan (link)</a>
                 <br /><strong>youtube: </strong><a href="https://www.youtube.com/channel/UCnNtNUfwisSs5h8g71lk8KA">Janjan (link)</a>
                 <br /><strong>linkedin: </strong><a href="https://www.linkedin.com/in/shrimple-as-that/">Micah Nichols (link)</a>
